# server/internal/http/contract/website_info_req.go
@@ -2,6 +2,8 @@ package contract
 
 // WebsiteInfoReq 网站信息请求。
 type WebsiteInfoReq struct {
-	Key   string `json:"key"`
-	Value string `json:"value"`
+	Key      string   `json:"key"`
+	Name     *string  `json:"name"`
+	Value    *string  `json:"value"`
+	InfoJSON *JSONRaw `json:"infoJson" swaggertype:"object"`
 }
